--- a/index.html
+++ b/index.html
@@ -155,84 +155,84 @@
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                              Accordion Item #1
+                            Who are these courses intended for?
                             </button>
                           </h2>
                           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                Those who aspire to be web developers.For people who wish to study web programming from the ground up and eventually work as a web developer for a software firm.For individuals who are unfamiliar with programming or web development.Even those who haven't figured it out after four years of CSE and haven't learnt much will be able to apply for jobs by studying Complete Web Development from this course.
                             </div>
                           </div>
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingTwo">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                              Accordion Item #2
+                            What are the prerequisites for taking these courses?
                             </button>
                           </h2>
                           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                Because we are starting from scratch.So you don't need to know much ahead of time.However, if you have the time, you can do these three tasks.You simply need to be more selective in the assistance you provide to others.Joining the course will not turn you become an automatic web developer.You must have the attitude to work hard and stick with it.If you are stuck anywhere, you must have the attitude to seek help as well as the will to persist with it.
                             </div>
                           </div>
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingThree">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                              Accordion Item #3
+                            How will we obtain the videos for these courses?
                             </button>
                           </h2>
                           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                Pre-recorded course videos will be used.You registered for this course and created an account.From the start of the course, the videos will be sent one module every day.Each module typically includes 10 to 12 movies. You must view and complete these videos on the same day they are released.As a result, you must set aside time each day for the course.And during that time, you may watch the film laying down, standing, leaning, shaking your legs, dancing, or hiding under the bed if you wish.
                             </div>
                           </div>
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingfour">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                              Accordion Item #4
+                            What will the course material be?
                             </button>
                           </h2>
                           <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                Only by looking at the course curriculum will you be able to grasp this.But, in a nutshell, this course has everything you need to become a serious web developer right now.In a nutshell, HTML, CSS, bootstrap, JavaScript, Git, ES6, REST API, server, and JSON are all there.Simultaneously, there is a method for creating a comprehensive website with the React, sophisticated React framework that is now the most popular. There are many more things to consider, such as node, database (mongodb), debug, problem solving, and interview questions.You will also be shown 11 websites during the course.As part of your homework, you will need to visit 11 more websites.There is no chance you will be able to accomplish this without becoming a decent grade junior web developer.
                             </div>
                           </div>
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingFive">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                              Accordion Item #5
+                            How long will it take to finish the course?
                             </button>
                           </h2>
                           <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                It will take roughly three months if you watch 1 to 1.5 hours of video every day and practice 4 to 6 hours additional.However, you may need to set aside additional time for schoolwork and assignments from time to time.We must introduce a workaholic mindset.There is no way to cheat or cut corners.
                             </div>
                           </div>
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingSix">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                              Accordion Item #6
+                                Why isn't this course offered for free?
                             </button>
                           </h2>
                           <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                This isn't just a video-watching course.Because this training is supported by 30 skilled developers.There are 11 assignments.Marks Plus will provide feedback.Within 24 hours, seven additional web engineers will be available to answer any of your inquiries. If there is an issue with your code, a specialized developer will address it through screenshare.Along with establishing a course website, developers, video editors, course moderators, live conceptual sessions, and job placement help, everyone who works together will no longer be able to manage their families for free.As a result, we must maintain a minimum cost for this course.
                             </div>
                           </div>
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingSeven">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                              Accordion Item #7
+                            What will we do if we are unable to complete the course study?
                             </button>
                           </h2>
                           <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                We've set up a private Facebook group for the course.We will have 14 competent web developers where I will be, as well as a few other team members in different occupations to lead you in some additional work and to help you.Our goal is to respond to all of your queries within 24 hours. The majority of the time, immediate responses are provided.You will acquire all of the answers in about 7-8 hours on average.Furthermore, if you can't solve the problem by working within the code (except on Friday), there will be a few parallel meet sessions at three o'clock every day.Where you may use screenshare to fix your problem.If you do not understand something, it will be explained to you.What more is required?
                             </div>
                           </div>
                         </div>
