Sign up page design complete

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a class="nav-link active" href="#">Login</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">Signup</a>
+                    <a class="nav-link active" href="inside-pages/signup.html">Signup</a>
                   </li>
                 </ul>
                 <form class="d-flex">
