Login page design completed

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">Login</a>
+                    <a class="nav-link active" href="inside-pages/login.html">Login</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="inside-pages/signup.html">Signup</a>
