Login page updated and registration created

--- a/inside-pages/login.html
+++ b/inside-pages/login.html
@@ -57,7 +57,7 @@
                             <input type="email" class="form-control" id="" placeholder="Enter Email">
                         </div>
                         <div class="col-12">
-                            <button type="submit" class="btn btn-outline-success">Login</button>
+                            <a href="login-home.html"><button type="submit" class="btn btn-outline-success">Login</button></a>
                         </div>
                     </div>
                 </div>
