--- a/inside-pages/login-home.html
+++ b/inside-pages/login-home.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1 class="text-center">here will add navbar</h1>
+    <a href="registration.html" class="text-decoration-none"><button type="submit" class="btn btn-outline-success d-grid mx-auto">Go to reg</button></a>
     <!-- now design started -->
     <div class="container">
         <div class="d-flex align-items-start">
@@ -33,7 +34,6 @@
             </div>
           </div>
     </div>
-    <a href="registration.html"><button class="btn btn-outline-success text-center">Go to reg</button></a>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
